Fixed margin and colors of transfer list item.

--- a/Styles/Colors.xaml
+++ b/Styles/Colors.xaml
@@ -13,8 +13,8 @@
     <Color x:Key="PrimaryColor85">#daec843d</Color>
     <Color x:Key="WhiteColor">#ff282828</Color>
     <Color x:Key="WhiterColor">#ff181818</Color>
-    <Color x:Key="Green">#007F0E</Color>
-    <Color x:Key="Orange">#997132</Color>
+    <Color x:Key="Green">#2b9300</Color>
+    <Color x:Key="Red">#ff5236</Color>
 
     <SolidColorBrush x:Key="PrimaryColorBrush" Color="{StaticResource PrimaryColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="PrimaryColor85Brush" Color="{StaticResource PrimaryColor85}" options:Freeze="True" />
@@ -26,9 +26,8 @@
     <SolidColorBrush x:Key="ScrollbarBrush" Color="#40ffffff" options:Freeze="True" />
     <SolidColorBrush x:Key="ScrollbarHoverBrush" Color="#60ffffff" options:Freeze="True" />
     <SolidColorBrush x:Key="DarkBackgroundBrush" Color="Black" Opacity="0.35" options:Freeze="True" />
-    <SolidColorBrush x:Key="DarkGreenBrush" Color="{StaticResource Green}" Opacity="0.3" options:Freeze="True" />
-    <SolidColorBrush x:Key="DarkRedBrush" Color="DarkRed" Opacity="0.3" options:Freeze="True" />
-    <SolidColorBrush x:Key="DarkOrangeBrush" Color="{StaticResource Orange}" Opacity="0.3" options:Freeze="True" />
+    <SolidColorBrush x:Key="LightGreenBrush" Color="{StaticResource Green}" Opacity="0.75" options:Freeze="True" />
+    <SolidColorBrush x:Key="LightRedBrush" Color="{StaticResource Red}" Opacity="0.65" options:Freeze="True" />
 
     <SolidColorBrush x:Key="DarkBrush" Color="#40ffffff" options:Freeze="True" />
     <SolidColorBrush x:Key="LightBrush" Color="#80ffffff" options:Freeze="True" />
