--- a/views/Downloads/DownloadsView.xaml
+++ b/views/Downloads/DownloadsView.xaml
@@ -23,7 +23,7 @@
         <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="Transparent"/>
 
         <!-- RIGHT PANEL -->
-        <ItemsControl Grid.Column="2" x:Name="DownloadList" Padding="10" Style="{StaticResource SmoothPanel}" Background="{StaticResource WhiterBrush}" />
+        <ItemsControl Grid.Column="2" x:Name="DownloadList" Style="{StaticResource SmoothPanel}" Background="{StaticResource WhiterBrush}" />
         
     </Grid>
 </UserControl>
