--- a/views/Downloads/DownloadItemView.xaml
+++ b/views/Downloads/DownloadItemView.xaml
@@ -47,9 +47,14 @@
         <TextBlock Text="{Binding Job.FileName}" Style="{StaticResource Label}" TextTrimming="CharacterEllipsis" 
                    Grid.Column="1" Grid.Row="1"/>
 
-        <!-- right side stats -->
+        <!-- right side -->
         <Label Content="{Binding Path=DownloadSpeedFormatted}" Padding="0" HorizontalAlignment="Right" 
                 Grid.Column="2" Grid.Row="0"/>
+        <Button Command="{Binding DeleteDownload}" Style="{StaticResource IconButton}" Width="40" Height="40" 
+                Grid.Column="2" Grid.Row="0" Margin="0,-15,-20,0" VerticalAlignment="Center" HorizontalAlignment="Center"
+                Visibility="{Binding Path=Transferring, Converter={StaticResource TrueToCollapsed}}">
+            <c:IconControl Height="12" Width="12" Foreground="{StaticResource LabelTextBrush}" Data="{StaticResource IconClose}" />
+        </Button>
         <TextBlock Style="{StaticResource Label}" HorizontalAlignment="Right"
                 Grid.Column="2" Grid.Row="1">
             <TextBlock.Inlines>
@@ -74,10 +79,11 @@
 
         <!-- status message -->
         <Grid x:Name="StatusSuccess" Visibility="{Binding Path=Transferring, Converter={StaticResource TrueToCollapsed}}"
-              Grid.ColumnSpan="3" Grid.Row="2" Grid.Column="0" Margin="0,-10,0,0" >
+              Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="65" />
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <c:IconControl Margin="0,0,15,0" Height="{Binding StatusPanelIconSize}" Width="{Binding StatusPanelIconSize}" Grid.Column="0"
@@ -86,6 +92,12 @@
             <c:RichTextBlock Style="{StaticResource Label}" Grid.Column="1" TextWrapping="Wrap" Margin="0,0,10,3" 
                 Foreground="{Binding StatusPanelForeground}" InlineList="{Binding StatusPanelLabel}">
             </c:RichTextBlock>
+
+            <!-- retry button -->
+            <Button Style="{StaticResource ButtonSolidSmall}"
+                    Visibility="{Binding Path=Retryable, Converter={StaticResource TrueToVisible}}"
+                    Grid.Column="2" HorizontalAlignment="Right" Margin="0,-5,0,0" Content="RETRY">
+            </Button>
         </Grid>
 
         <Separator Grid.ColumnSpan="3" Grid.Row="3" Grid.Column="0" Margin="0,5,-20,0"/>
