--- a/views/Downloads/DownloadItemView.xaml
+++ b/views/Downloads/DownloadItemView.xaml
@@ -50,7 +50,7 @@
         <!-- right side -->
         <Label Content="{Binding Path=DownloadSpeedFormatted}" Padding="0" HorizontalAlignment="Right" 
                 Grid.Column="2" Grid.Row="0"/>
-        <Button Command="{Binding DeleteDownload}" Style="{StaticResource IconButton}" Width="40" Height="40" 
+        <Button Command="{Binding DeleteJob}" Style="{StaticResource IconButton}" Width="40" Height="40" 
                 Grid.Column="2" Grid.Row="0" Margin="0,-15,-20,0" VerticalAlignment="Center" HorizontalAlignment="Center"
                 Visibility="{Binding Path=Transferring, Converter={StaticResource TrueToCollapsed}}">
             <c:IconControl Height="12" Width="12" Foreground="{StaticResource LabelTextBrush}" Data="{StaticResource IconClose}" />
@@ -73,7 +73,7 @@
             <ProgressBar Value="{Binding Path=DownloadPercent, Mode=OneWay}" Style="{StaticResource BlehProgressBar}" 
                 Grid.Column="0" Margin="0,0,15,0" IsIndeterminate="False"/>
             <Button x:Name="SelectButton" Style="{StaticResource ButtonSolidSmall}" 
-                Content="CANCEL" Command="{Binding CancelDownload}"
+                Content="CANCEL" Command="{Binding CancelJob}"
                 Grid.Column="1" HorizontalAlignment="Right"/>
         </Grid>
 
@@ -94,7 +94,7 @@
             </c:RichTextBlock>
 
             <!-- retry button -->
-            <Button Style="{StaticResource ButtonSolidSmall}"
+            <Button Style="{StaticResource ButtonSolidSmall}" Command="{Binding RetryJob}"
                     Visibility="{Binding Path=Retryable, Converter={StaticResource TrueToVisible}}"
                     Grid.Column="2" HorizontalAlignment="Right" Margin="0,-5,0,0" Content="RETRY">
             </Button>
