--- a/views/Games/GameItemView.xaml
+++ b/views/Games/GameItemView.xaml
@@ -48,10 +48,12 @@
 
                 <!-- controls -->
                 <StackPanel Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToVisible}}" Grid.Column="2" Orientation="Horizontal" Margin="0,5,0,0">
-                    <c:IconControl Foreground="{Binding Path=Game.Release.Starred, Converter={StaticResource TrueToPrimary}}" Data="{StaticResource IconStar}" Margin="10,-2,12,0"  Height="18" Width="18" />
-                    <ToggleButton x:Name="SyncButton" Command="{Binding SyncToggled}" 
-                                  IsChecked="{Binding Game.IsSynced, Converter={StaticResource DebugBinding}, diag:PresentationTraceSources.TraceLevel=High}" Height="20" Margin="5,0,17,0"/>
-                    <c:LabelFor Content="SYNC" FontSize="15" Foreground="{Binding ElementName=SyncButton, Path=Background}" Margin="0,0,10,0" Target="{x:Reference SyncButton}"/>
+                    <c:IconControl Foreground="{Binding Path=Game.Release.Starred, Converter={StaticResource TrueToPrimary}}" 
+                                   Data="{StaticResource IconStar}" Height="18" Width="18" Margin="10,-2,12,0"/>
+                    <ToggleButton Command="{Binding SyncToggled}" IsChecked="{Binding Game.IsSynced}" 
+                                  x:Name="SyncButton" Height="20" Margin="5,0,17,0"/>
+                    <c:LabelFor Target="{x:Reference SyncButton}" Foreground="{Binding ElementName=SyncButton, Path=Background}" 
+                                Content="SYNC" FontSize="15" Margin="0,0,10,0" />
                 </StackPanel>
             </Grid>
 
