--- a/views/Downloads/DownloadItemView.xaml
+++ b/views/Downloads/DownloadItemView.xaml
@@ -31,7 +31,7 @@
         </Grid.RowDefinitions>
 
         <!-- image -->
-        <c:UrlImage UrlSource="{Binding Job.File.Media[playfield_image].Variations[square].Url}" 
+        <c:UrlImage UrlSource="{Binding Job.File.Thumb.Url}" 
             Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="50" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
         <!-- data -->
