--- a/views/Games/GameItemView.xaml
+++ b/views/Games/GameItemView.xaml
@@ -23,7 +23,7 @@
         <valueConverters:DebugDataBindingConverter x:Key="DebugBinding"/>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Margin="0,10,0,-5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="80" />
             <ColumnDefinition Width="*" />
