--- a/views/Settings/SettingsView.xaml
+++ b/views/Settings/SettingsView.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="320" d:DesignWidth="800">
+      d:DesignHeight="800" d:DesignWidth="800">
 
     <Grid Margin="20">
         <Grid.RowDefinitions>
@@ -12,8 +12,19 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 		<ScrollViewer>
-            <StackPanel Grid.Row="0" Orientation="Vertical" Grid.ColumnSpan="2">
+            
+            <StackPanel Orientation="Vertical">
 
+                <Label Content="Welcome!" HorizontalAlignment="Center" FontSize="36" FontWeight="Light" Foreground="{StaticResource PrimaryColorBrush}"/>
+                <TextBlock Style="{StaticResource Label}" Margin="50,10,50,0" TextAlignment="Center" TextWrapping="Wrap" Foreground="{StaticResource PrimaryColorBrush}">
+                    The client you have just installed will seriously make your life easier if you're running it on a 
+                    Virtual Cabinet, but also if you just want to keep up with new tables on your desktop.
+                </TextBlock>
+                <TextBlock Style="{StaticResource Label}" Margin="50,10,50,25" TextAlignment="Center" TextWrapping="Wrap" Foreground="{StaticResource PrimaryColorBrush}">
+                    In order to get going, we need two things from you: The folder where you installed PinballX and 
+                    the API key from VPDB. You can configure both below. Scroll down if you want to further configure,
+                    but you can do that later as well.
+                </TextBlock>
                 <Label Content="PinballX" Style="{StaticResource Header1}" Margin="0,-10,0,0"/>
                 <Separator/>
 
@@ -31,7 +42,8 @@
                             <Run x:Name="PbxFolder" FontWeight="Bold" Foreground="{StaticResource InputTextColorBrush}"/>
                         </TextBlock.Inlines>
                     </TextBlock>
-                    <Button x:Name="PinballXFolderButton" Content="CHOOSE FOLDER" Grid.Column="2" Style="{StaticResource ButtonSolidLarge}" />
+                    <Button x:Name="PinballXFolderButton" Content="CHOOSE FOLDER" ToolTip="We need to know where PinballX sits so we know where to look for your tables."
+                            Grid.Column="2" Style="{StaticResource ButtonSolidLarge}" />
                 </Grid>
 
                 <Label Content="VPDB Connection" Style="{StaticResource Header1}" Margin="0,20,0,0"/>
@@ -39,14 +51,14 @@
 
                 <!-- API KEY -->
                 <Label Content="API Key" HorizontalAlignment="Left" />
-                <TextBox x:Name="ApiKey" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
+                <TextBox x:Name="ApiKey" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" ToolTip="You can get your API key on vpdb.io by browsing to Profile -> Application Access Tokens and generate one."/>
 
                 <!-- [X] Advanced Options -->
                 <CheckBox x:Name="ShowAdvancedOptions" Content="Show Advanced Options" FontSize="18" Margin="0,20,0,0" Checked="ShowAdvancedOptions_Checked" Unchecked="ShowAdvancedOptions_Checked"/>
 
                 <!-- API Endpoint -->
                 <Label x:Name="ApiEndpointLabel" Content="VPDB API Endpoint" HorizontalAlignment="Left" Margin="0,20,0,0"/>
-                <TextBox x:Name="Endpoint" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" />
+                <TextBox x:Name="Endpoint" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" ToolTip="In case you want to hit another instance of VPDB. Probably not."/>
 
                 <!-- HTTP Basic Auth -->
                 <Label x:Name="BasicAuthLabel" Content="HTTP Basic Auth" Margin="0,10,0,0" HorizontalAlignment="Left" />
@@ -56,8 +68,8 @@
                         <ColumnDefinition Width="10"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="AuthUser" Height="23" Grid.Column="0"/>
-                    <TextBox x:Name="AuthPass" Height="23" Grid.Column="2"/>
+                    <TextBox x:Name="AuthUser" Height="23" Grid.Column="0" ToolTip="In the beta phase, VPDB has an additional layer of authentication. Put the username here."/>
+                    <TextBox x:Name="AuthPass" Height="23" Grid.Column="2" ToolTip="In the beta phase, VPDB has an additional layer of authentication. Put the password here."/>
                 </Grid>
 
             </StackPanel>
